--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
 		"no-shadow": "off",
 		"no-param-reassign": "off",
 		"eol-last": "off",
+		"indent": [2, "tab"],
+		"no-tabs": 0,
 		"import/extensions": [
 			1,
 			{
